# telegram-ranger

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: .env.example  app.rs  captcha.rs  commands.rs  config.rs  handlers.rs  main.rs  state.rs  utils.rs
src/captcha/: button.rs  image.rs  math2.rs  mod.rs
